--- a/app/config/config.yaml
+++ b/app/config/config.yaml
@@ -14,19 +14,6 @@ print_config: true
 # Operating mode(debug,test,release)
 run_mode : debug
 
-cors:
-  # Whether to enable
-  enable: true
-  #  List of domain names that allow cross-domain requests (* means all allowed)
-  allow_origins: "*"
-  # List of request methods that allow cross-domain requests
-  allow_methods: "POST, GET, PUT, DELETE, PATCH"
-  # List of non-simple headers that clients are allowed to use with cross-domain requests
-  allow_headers: "Origin, Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization"
-  # Whether the request can include user credentials such as cookies, HTTP authentication or client SSL certificates
-  allow_credentials: "true"
-  # The time for which the results of the preflight request can be cached (in seconds)
-  max_age: "86400"
 
 log:
   # Log level (1: fatal, 2: error, 3: warn, 4: info, 5: debug)
@@ -70,16 +57,17 @@ redis:
   password: ""
 
 # dbsql config
-postgres:
+dbsql:
   # Data source name    "postgresql://root:secret@localhost:5432/simplebank?sslmode=disable"
+  driver_name: "postgres"
   username: "root"
   password: "secret"
-  host: "192.168.0.1"
+  host: "172.17.0.1"
   port: 5432
   database_name: "simple_bank"
   # Set the maximum time that the connection can be reused (unit: seconds)
   max_life_time:  1800
   # Set the maximum number of open connections to the database
-  max_open_conns: 100
+  max_open_conns: 10
   # Set the maximum number of connections in the idle connection pool
-  max_idle_conns: 100
+  max_idle_conns: 10
